# qa

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  make_mandel.sh  make_mandlebrot.sh  rebuild.sh
apps/: dyno.cpp  fib.cpp  graph.cpp  hibp.cpp  inheritance.cpp  lsp_with_downcast.cpp  mandel.cpp  mandel.py  mandelbrot.cpp  move_copy_sem.cpp  myslice_demo.cpp  mysql.cpp  pi.cpp  poly_templates.cpp  pytrip.cpp  qa.cpp  qanda.cpp  sets.cpp  type_erasure.cpp  variant.cpp  visitor.cpp  wc.cpp  wc.php  wgraph.cpp  word_count.cpp
data/: .gitignore  .lb_capitals_west_eu.csv  .lb_capitals_west_eu_big4.csv  capitals.csv  capitals_west_eu.csv  capitals_west_eu_big4.csv  short_shakespeare.txt
include/: csv.hpp  leader.hpp  qa.cpp  qa.h  qa.hpp  qa_set.cpp  qa_set.hpp  strutil.h
include/conf/: conf.cpp  conf.hpp
include/mypp/: mypp.cpp  mypp.hpp
include/myslice/: myslice.cpp  myslice.hpp  table_parse.cpp
include/xos/: console.cpp  console.hpp
